crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@assign_variable_and_trace.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/assign_variable_and_trace.pcode
---
Ok:
  actions:
    - ConstantPool:
        - message
        - Hello World
    - Push:
        - Constant: 0
    - Push:
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Trace
  label_positions: {}
