crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@assign_variable_many_ways.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/assign_variable_many_ways.pcode
---
Ok:
  actions:
    - ConstantPool:
        - message
        - "Hello "
        - World
        - "!"
        - a
        - b
        - c
        - "a: "
        - "b: "
        - "c: "
    - Push:
        - Constant: 0
    - Push:
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - Add2
    - SetVariable
    - Push:
        - Constant: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 3
    - Add2
    - SetVariable
    - Push:
        - Constant: 0
    - GetVariable
    - Trace
    - Push:
        - Constant: 4
    - Push:
        - Integer: 1
    - DefineLocal
    - Push:
        - Constant: 5
    - DefineLocal2
    - Push:
        - Constant: 6
    - Push:
        - Integer: 3
    - DefineLocal
    - Push:
        - Constant: 7
    - Push:
        - Constant: 4
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Constant: 5
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Push:
        - Constant: 6
    - GetVariable
    - Add2
    - Trace
  label_positions: {}
