crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@function.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/function.pcode
---
Ok:
  actions:
    - ConstantPool:
        - Test called!
        - ":)"
        - anon
        - Anonymous function called!
        - "a = "
        - ", b = "
        - bb
        - aa
        - test
    - DefineFunction:
        name: test
        params: []
        actions:
          actions:
            - Push:
                - Constant: 0
            - Trace
            - Push:
                - Constant: 1
            - Return
          label_positions: {}
    - Push:
        - Constant: 2
    - DefineFunction2:
        name: ""
        params:
          - name: a
            register: 2
          - name: b
            register: 1
        actions:
          actions:
            - Push:
                - Constant: 3
            - Trace
            - Push:
                - Constant: 4
                - Register: 2
            - Add2
            - Push:
                - Constant: 5
            - Add2
            - Push:
                - Register: 1
            - Add2
            - Trace
          label_positions: {}
        register_count: 3
        preload_this: false
        suppress_this: true
        preload_arguments: false
        suppress_arguments: true
        preload_super: false
        suppress_super: true
        preload_root: false
        preload_parent: false
        preload_global: false
    - DefineLocal
    - Push:
        - Constant: 6
        - Constant: 7
        - Integer: 2
        - Constant: 2
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
        - Constant: 8
    - CallFunction
    - Push:
        - Integer: 0
        - Constant: 8
    - CallFunction
    - Add2
    - Trace
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions: []
          label_positions: {}
    - Pop
  label_positions: {}
