crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@function_hoisting.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/function_hoisting.pcode
---
Ok:
  actions:
    - ConstantPool:
        - function within a function!
        - first function!
        - functionWithinAFunction
        - "firstVar = "
        - firstVar
        - ", secondVar = "
        - secondVar
        - second function!
        - second function! (but redefined!)
        - third function!
        - Unused function!
        - firstFunction
        - secondFunction
        - thirdFunction
    - DefineFunction:
        name: firstFunction
        params: []
        actions:
          actions:
            - DefineFunction:
                name: functionWithinAFunction
                params: []
                actions:
                  actions:
                    - Push:
                        - Constant: 0
                    - Trace
                  label_positions: {}
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - Integer: 0
            - Push:
                - Constant: 2
            - CallFunction
            - Pop
            - Push:
                - Constant: 3
            - Push:
                - Constant: 4
            - GetVariable
            - Add2
            - Push:
                - Constant: 5
            - Add2
            - Push:
                - Constant: 6
            - GetVariable
            - Add2
            - Trace
          label_positions: {}
    - DefineFunction:
        name: secondFunction
        params: []
        actions:
          actions:
            - Push:
                - Constant: 7
            - Trace
            - Push:
                - Constant: 3
            - Push:
                - Constant: 4
            - GetVariable
            - Add2
            - Push:
                - Constant: 5
            - Add2
            - Push:
                - Constant: 6
            - GetVariable
            - Add2
            - Trace
          label_positions: {}
    - DefineFunction:
        name: secondFunction
        params: []
        actions:
          actions:
            - Push:
                - Constant: 8
            - Trace
            - Push:
                - Constant: 3
            - Push:
                - Constant: 4
            - GetVariable
            - Add2
            - Push:
                - Constant: 5
            - Add2
            - Push:
                - Constant: 6
            - GetVariable
            - Add2
            - Trace
          label_positions: {}
    - DefineFunction:
        name: thirdFunction
        params: []
        actions:
          actions:
            - Push:
                - Constant: 9
            - Trace
          label_positions: {}
    - DefineFunction:
        name: unusedFunction
        params: []
        actions:
          actions:
            - Push:
                - Constant: 10
            - Trace
          label_positions: {}
    - Push:
        - Constant: 4
    - Push:
        - Integer: 1
    - DefineLocal
    - Push:
        - Integer: 0
    - Push:
        - Constant: 11
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 12
    - CallFunction
    - Pop
    - Push:
        - Constant: 6
    - Push:
        - Integer: 2
    - DefineLocal
    - Push:
        - Integer: 0
    - Push:
        - Constant: 11
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 12
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 11
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 12
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 11
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 12
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 2
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
    - Push:
        - Constant: 13
    - CallFunction
    - Pop
  label_positions: {}
